version 3.42 2025-08-01
- fixed bug in tag action form: first_name + last_name placeholders, $_SESSION['submission'] flush after $single_display
- fixed bug in new action form: messages field always disabled when only 1 action type has messages enabled
- changed all "insert" copy to "add"
- fixes for $config['company_name'] with "the" prefix
- added update legacy config_db.php to /maintenance/update data structure/
- changed $config_db array to DB_* constants in config_db.php
- upgraded to PHPMailer 6.10.0 (2025-04-24)
- added "include passwords" to /maintenance/sample data/
- added JavaScript date picker to date_paid form field (litepicker.js)
- removed unsafe-inline from default script-src (CSP Level 2 now required)
- refactoring of IIFEs to let/const keywords (ES6/ECMAScript2015 now required)

version 3.41 2025-01-03
- fixed "admin only" logic: removed from index.php
- upgraded to PHPMailer 6.9.3 (2024-11-22)
- added "purge legacy password hashes" to /maintenance/purge/
- changed hash_passwords routine in /maintenance/update data structure/ to use password_wrapper() rather than SHA1
- fixed mysqldump bug: mySQL credentials can now include special characters
- fixed installer bug: mySQL credentials can now include quotes
- added conditional logic for $config['logo_path']
- changed fields.type + fields.section from VARCHAR(10) to ENUM
- added "test upload" submodule to maintenance
- added mysqlinfo to /maintenance/versions/
- removed underlined links
- fixed bug where password_wrapper() would validate hashes as passwords
- tooltips now use maxWidth rather than width
- lightbox() now resizable
- lightbox() can now set width + height to fit contents by passing 0 as function arguments
- added last_reader_id to submissions table (requires sync_last_action() for last action tooltips)
- added "last action" tooltips on action counts on main submission list
- added "back to reports" logic to link back from submissions + contacts